Promjena naslova u Nenine crtice

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Ci0g - Priče</h1>
+        <h1>Nenine crtice</h1>
     </header>
     <main>
         <article>
