--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="hr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ci0g - Priče</title>
+    <title>Nenine crtice</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,13 +12,20 @@
     </header>
     <main>
         <article>
-            <h2>Naslov priče</h2>
-            <p>Ovdje dolazi kratak opis priče...</p>
+            <h2>Naslov crtice</h2>
+            <p>Kratak opis crtice...</p>
             <a href="#">Čitaj dalje</a>
         </article>
+        <section id="stories">
+            <h2>Nenine crtice</h2>
+        </section>
     </main>
     <footer>
-        <p>&copy; 2025 Ci0g</p>
+        <p>&copy; 2025 Danen Cinulag</p>
     </footer>
+
+    <!-- Dodaj skriptu ovdje -->
+    <script src="script.js"></script>
+
 </body>
 </html>
