Update index.html 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="#">Čitaj dalje</a>
         </article>
         <section id="stories">
-            <h2>Nenine crtice</h2>
+            <h2>Ideja je da ovdje prebacim svoje Facebook crtice</h2>
         </section>
     </main>
     <footer>
