Update index.html hoba1

--- a/index.html
+++ b/index.html
@@ -1,31 +1,34 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="hr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nenine crtice</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nenine crtice</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Nenine crtice</h1>
-    </header>
-    <main>
-        <article>
-            <h2>Naslov crtice</h2>
-            <p>Kratak opis crtice...</p>
-            <a href="#">Čitaj dalje</a>
-        </article>
-        <section id="stories">
-            <h2>Ideja je da ovdje prebacim svoje Facebook crtice</h2>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 Danen Cinulag</p>
-    </footer>
+  <header>
+    <h1>Nenine crtice</h1>
+  </header>
 
-    <!-- Dodaj skriptu ovdje -->
-    <script src="script.js"></script>
+  <main class="octopus-page">
+    <div class="octopus-container">
+      <img src="images/hobotnica.jpg" alt="Hobotnica" class="octopus-img">
 
+      <!-- Linkovi kao krakovi -->
+      <div class="tentacle tentacle1"><a href="#">1. Tata Neno</a></div>
+      <div class="tentacle tentacle2"><a href="#">2. Nostalgični Neno</a></div>
+      <div class="tentacle tentacle3"><a href="#">3. Na biciklu se vozi Neno</a></div>
+      <div class="tentacle tentacle4"><a href="#">4. Neno na planinama</a></div>
+      <div class="tentacle tentacle5"><a href="#">5. Nenina muzika</a></div>
+      <div class="tentacle tentacle6"><a href="#">6. Morski Neno</a></div>
+      <div class="tentacle tentacle7"><a href="#">7. Putopisac Neno</a></div>
+      <div class="tentacle tentacle8"><a href="#">8. Nesvrstani Neno</a></div>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Danen Cinulag</p>
+  </footer>
 </body>
 </html>
