--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
@@ -15,15 +15,15 @@
     <div class="octopus-container">
       <img src="images/hobotnica.jpg" alt="Hobotnica" class="octopus-img">
 
-      <!-- Linkovi kao krakovi -->
-      <div class="tentacle tentacle1"><a href="#">1. Tata Neno</a></div>
-      <div class="tentacle tentacle2"><a href="#">2. Nostalgični Neno</a></div>
-      <div class="tentacle tentacle3"><a href="#">3. Na biciklu se vozi Neno</a></div>
-      <div class="tentacle tentacle4"><a href="#">4. Neno na planinama</a></div>
-      <div class="tentacle tentacle5"><a href="#">5. Nenina muzika</a></div>
-      <div class="tentacle tentacle6"><a href="#">6. Morski Neno</a></div>
-      <div class="tentacle tentacle7"><a href="#">7. Putopisac Neno</a></div>
-      <div class="tentacle tentacle8"><a href="#">8. Nesvrstani Neno</a></div>
+      <!-- Povezani krakovi hobotnice -->
+      <div class="tentacle tentacle1"><a href="tata-neno.html">1. Tata Neno</a></div>
+      <div class="tentacle tentacle2"><a href="nostalgicni-neno.html">2. Nostalgični Neno</a></div>
+      <div class="tentacle tentacle3"><a href="bicikl-neno.html">3. Na biciklu se vozi Neno</a></div>
+      <div class="tentacle tentacle4"><a href="planine-neno.html">4. Neno na planinama</a></div>
+      <div class="tentacle tentacle5"><a href="muzika-neno.html">5. Nenina muzika</a></div>
+      <div class="tentacle tentacle6"><a href="morski-neno.html">6. Morski Neno</a></div>
+      <div class="tentacle tentacle7"><a href="putopisac-neno.html">7. Putopisac Neno</a></div>
+      <div class="tentacle tentacle8"><a href="nesvrstani-neno.html">8. Nesvrstani Neno</a></div>
     </div>
   </main>
 
