--- a/tata-neno.html
+++ b/tata-neno.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="hr">
+<head>
+  <meta charset="UTF-8">
+  <title>Tata Neno</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Tata Neno</h1>
+  </header>
+  <main>
+    <p>Ovo su crtice o Katji...</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 Nenine crtice</p>
+  </footer>
+</body>
+</html>
 
