--- a/Morski Neno.html
+++ b/Morski Neno.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Neno</h1>
+    <h1>Morski Neno</h1>
   </header>
   <main>
     <p>Crtice sa Jadranskog mora, najviše sa otoka...</p>
