--- a/Nenina muzika.html
+++ b/Nenina muzika.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Neno</h1>
+    <h1>Nenina muzika</h1>
   </header>
   <main>
     <p>Muzičke, crtice, uglavnom o koncertima...</p>
