Update Neno na planinama.html

--- a/Neno na planinama.html
+++ b/Neno na planinama.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Neno</h1>
+    <h1>Neno na planinama</h1>
   </header>
   <main>
     <p>Planinarske crtice...</p>
