--- a/Putopisac Neno.html
+++ b/Putopisac Neno.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Neno</h1>
+    <h1>Putopisac Neno</h1>
   </header>
   <main>
     <p>Crtice s putovanja...</p>
