--- a/nostalgicni-neno.html
+++ b/nostalgicni-neno.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <header>
-    <h1>Tata Neno</h1>
+    <h1>Nostalgični Neno</h1>
   </header>
   <main>
     <p>Nostalgične crtice...</p>
