--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <!-- Krakovi s dodanim klasama 'arm' -->
       <div class="arm tentacle1"><a href="tata-neno.html">1. Tata Neno</a></div>
       <div class="arm tentacle2"><a href="nostalgicni-neno.html">2. Nostalgični Neno</a></div>
-      <div class="arm tentacle3"><a href="bicikl-neno.html">3. Na biciklu se vozi Neno</a></div>
-      <div class="arm tentacle4"><a href="planine-neno.html">4. Neno na planinama</a></div>
+      <div class="arm tentacle3"><a href="bicikl-neno.html">3. Neno biciklist</a></div>
+      <div class="arm tentacle4"><a href="planine-neno.html">4. Neno planinar</a></div>
       <div class="arm tentacle5"><a href="muzika-neno.html">5. Nenina muzika</a></div>
       <div class="arm tentacle6"><a href="morski-neno.html">6. Morski Neno</a></div>
       <div class="arm tentacle7"><a href="putopisac-neno.html">7. Putopisac Neno</a></div>
