Update Neno na planinama.html

--- a/Neno na planinama.html
+++ b/Neno na planinama.html
@@ -2,12 +2,12 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Neno na planinama</title>
+  <title>Neno planinar</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Neno na planinama</h1>
+    <h1>Neno planinar</h1>
   </header>
   <main>
     <p>Planinarske crtice...</p>
