--- a/Na biciklu se vozi Neno.html
+++ b/Na biciklu se vozi Neno.html
@@ -2,12 +2,12 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Na biciklu se vozi Neno</title>
+  <title>Neno biciklist</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Na biciklu se vozi Neno</h1>
+    <h1>Neno biciklist</h1>
   </header>
   <main>
     <p>Crtice sa biciklističkih ruta...</p>
