--- a/tata-neno.html
+++ b/tata-neno.html
@@ -2,16 +2,40 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tata Neno</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Povezano s postojećim CSS-om -->
 </head>
 <body>
   <header>
     <h1>Tata Neno</h1>
   </header>
+
   <main>
-    <p>Ovo su crtice o Katji...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Kojo no tsuki</li>
+      <li>Lola</li>
+      <li>Augmentativi</li>
+      <li>Smijeh i ples na Mirogoju</li>
+      <li>Zubić Vila</li>
+      <li>Male zvijezde Stona</li>
+      <li>Prvi pečat u pasošu</li>
+      <li>Uskršnji koncert</li>
+      <li>Smogovci</li>
+      <li>Babica se predomislila</li>
+      <li>Skozanjska</li>
+      <li>Gajba za pet</li>
+      <li>Tobože tegoban tobogan</li>
+      <li>Nedelišće (Gimnastičarka)</li>
+      <li>Muzička škola</li>
+      <li>Produkcija</li>
+      <li>Krevet na kat</li>
+      <li>Glumica</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a> <!-- Link za povratak -->
   </main>
+
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
   </footer>
