--- a/tata-neno.html
+++ b/tata-neno.html
@@ -14,25 +14,26 @@
   <main>
     <h2>Popis crtica:</h2>
     <ol>
-      <li>Kojo no tsuki</li>
-      <li>Lola</li>
-      <li>Augmentativi</li>
-      <li>Smijeh i ples na Mirogoju</li>
-      <li>Zubić Vila</li>
-      <li>Male zvijezde Stona</li>
-      <li>Prvi pečat u pasošu</li>
-      <li>Uskršnji koncert</li>
-      <li>Smogovci</li>
-      <li>Babica se predomislila</li>
-      <li>Skozanjska</li>
-      <li>Gajba za pet</li>
-      <li>Tobože tegoban tobogan</li>
-      <li>Nedelišće (Gimnastičarka)</li>
-      <li>Muzička škola</li>
-      <li>Produkcija</li>
-      <li>Krevet na kat</li>
-      <li>Glumica</li>
-    </ol>
+  <li><a href="kojo-no-tsuki.html">Kojo no tsuki</a></li>
+  <li><a href="lola.html">Lola</a></li>
+  <li><a href="augmentativi.html">Augmentativi</a></li>
+  <li><a href="smijeh-i-ples-na-mirogoju.html">Smijeh i ples na Mirogoju</a></li>
+  <li><a href="zubic-vila.html">Zubić Vila</a></li>
+  <li><a href="male-zvijezde-stona.html">Male zvijezde Stona</a></li>
+  <li><a href="prvi-pecat-u-pasosu.html">Prvi pečat u pasošu</a></li>
+  <li><a href="uskrsnji-koncert.html">Uskršnji koncert</a></li>
+  <li><a href="smogovci.html">Smogovci</a></li>
+  <li><a href="babica-se-predomislila.html">Babica se predomislila</a></li>
+  <li><a href="skozanjska.html">Skozanjska</a></li>
+  <li><a href="gajba-za-pet.html">Gajba za pet</a></li>
+  <li><a href="toboge-tegoban-tobogan.html">Tobože tegoban tobogan</a></li>
+  <li><a href="nedelisce-gimnasticarka.html">Nedelišće (Gimnastičarka)</a></li>
+  <li><a href="muzicka-skola.html">Muzička škola</a></li>
+  <li><a href="produkcija.html">Produkcija</a></li>
+  <li><a href="krevet-na-kat.html">Krevet na kat</a></li>
+  <li><a href="glumica.html">Glumica</a></li>
+</ol>
+
     <a href="index.html">← Povratak na početnu stranicu</a> <!-- Link za povratak -->
   </main>
 
