--- a/kojo-no-tsuki.html
+++ b/kojo-no-tsuki.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kojo no tsuki</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"> <!-- Povezano sa stilovima -->
 </head>
 <body>
   <header>
@@ -12,26 +12,23 @@
   </header>
 
   <main>
-    <p>
-Kojo no tsuki
-Ljeta gospodnjeg dvijehiljadeipetog u Cinulaga stan na Knežiji se uselila deset dana mlada, 51 centimetar duga i tri i pol kilograma teška djevojčica, sa čuperkom crvene kose na glavi. Mrvica Katja Cinulag pojavila se glasno i naglavačke prevrnula moj život. Burni momački život je postao prošlost, a noćna buđenja su postala svakodnevnica, bolje reći svakonoćnica.
+    <p>Ljeta gospodnjeg dvijehiljadeipetog u Cinulaga stan na Knežiji se uselila deset dana mlada, 51 centimetar duga i tri i pol kilograma teška djevojčica, sa čuperkom crvene kose na glavi. Mrvica Katja Cinulag pojavila se glasno i naglavačke prevrnula moj život. Burni momački život je postao prošlost, a noćna buđenja su postala svakodnevnica, bolje reći svakonoćnica.</p>
 
-Nikad mi ta buđenja nisu bila problem, čak bi se moglo reći da sam uživao u njima. Bez zajebancije. Nije teško objasniti. Euforični zanos je novopečenog oca napunio energijom kao Duracell bateriju. Ima još nešto. U prve dvije godine dvadeset i prvog stoljeća proveo sam sijaset besanih noći uz teško bolesnog oca. Puno više od nesanice mučio me osjećaj nemoći i saznanje da nema nade za ozdravljenje. Nakon toga, buđenja uz Katjin plač bila su prava katarza.
+    <p>Nikad mi ta buđenja nisu bila problem, čak bi se moglo reći da sam uživao u njima. Bez zajebancije. Nije teško objasniti. Euforični zanos je novopečenog oca napunio energijom kao Duracell bateriju. Ima još nešto. U prve dvije godine dvadeset i prvog stoljeća proveo sam sijaset besanih noći uz teško bolesnog oca. Puno više od nesanice mučio me osjećaj nemoći i saznanje da nema nade za ozdravljenje. Nakon toga, buđenja uz Katjin plač bila su prava katarza.</p>
 
-U gluho doba Katja bi popila svoju bočicu s mlijekom, a ja bih je strpljivo nosio na ramenu dok se ne bi pošteno podrignula par puta. Što sad? Treba dijete uspavati, ne mogu ga samo staviti u krevetić. Pjesma za uspavljivanje se zove uspavanka, prvenstveno je namijenjena bezuboj djeci ili djeci sitnog zuba. Slabo pamtim uspavanke iz djetinjstva. Što da pjevam?
+    <p>U gluho doba Katja bi popila svoju bočicu s mlijekom, a ja bih je strpljivo nosio na ramenu dok se ne bi pošteno podrignula par puta. Što sad? Treba dijete uspavati, ne mogu ga samo staviti u krevetić. Pjesma za uspavljivanje se zove uspavanka, prvenstveno je namijenjena bezuboj djeci ili djeci sitnog zuba. Slabo pamtim uspavanke iz djetinjstva. Što da pjevam?</p>
 
-Mislim da sam izvrtio sav svoj repertoar laganih pjesama koji, priznajem, nije baš impresivan, s obzirom da sam oduvijek bio pobornik puno žešće muzike. Za dječje pjesme sam u međuvremenu postao ekspert, ali tada mi je na pamet padao samo zeko koji zalud traži potočić. U sjećanje sam prizivao sve one balade koje je Zoki obično svirao na fajrontima pijanih studentskih tuluma. Tihim glasom, gotovo šapatom, pjevao sam pjesme Bajage, Dugmeta, Crvene jabuke, Pušenja... Priznajem, našlo se tu par sevdalinki i starogradskih pjesama.
+    <p>Mislim da sam izvrtio sav svoj repertoar laganih pjesama koji, priznajem, nije baš impresivan, s obzirom da sam oduvijek bio pobornik puno žešće muzike. Za dječje pjesme sam u međuvremenu postao ekspert, ali tada mi je na pamet padao samo zeko koji zalud traži potočić. U sjećanje sam prizivao sve one balade koje je Zoki obično svirao na fajrontima pijanih studentskih tuluma. Tihim glasom, gotovo šapatom, pjevao sam pjesme Bajage, Dugmeta, Crvene jabuke, Pušenja... Priznajem, našlo se tu par sevdalinki i starogradskih pjesama.</p>
 
-Dobro sam se osjećao dok sam pjevao, premda nisam siguran koliko su te pjesme poslužile svojoj uspavljivačkoj svrsi. U stvari, samo za jednu pjesmu sam siguran da je bila pun pogodak. Uz nju bi Katja vazda zaspala kao beba. Obično sam tu pjesmu koristio kao joker. Zašto se kaže za nekoga da spava kao beba kad ima miran i dubok san? Moja beba nikako da potegne duže od par nemirnih sati.
+    <p>Dobro sam se osjećao dok sam pjevao, premda nisam siguran koliko su te pjesme poslužile svojoj uspavljivačkoj svrsi. U stvari, samo za jednu pjesmu sam siguran da je bila pun pogodak. Uz nju bi Katja vazda zaspala kao beba. Obično sam tu pjesmu koristio kao joker. Zašto se kaže za nekoga da spava kao beba kad ima miran i dubok san? Moja beba nikako da potegne duže od par nemirnih sati.</p>
 
-No, vratimo se na Katjinu omiljenu uspavanku. Radi se o tradicionalnoj japanskoj pjesmi Kojo no tsuki, što u prijevodu znači "Mjesec nad srušenim dvorcem". Riječi pjesme zapamtih još za srednjoškolskih dana slušajući live album Scorpionsa Tokyo Tapes, na kojem se nalazi njena obrada. Inače, pjesmu je napisao japanski pjesnik Bansui Doi početkom prošlog stoljeća, inspiriran obilaskom ostataka starog dvorca u dalekom Japanu.
+    <p>No, vratimo se na Katjinu omiljenu uspavanku. Radi se o tradicionalnoj japanskoj pjesmi <em>Kojo no tsuki</em>, što u prijevodu znači "Mjesec nad srušenim dvorcem". Riječi pjesme zapamtih još za srednjoškolskih dana slušajući live album Scorpionsa <em>Tokyo Tapes</em>, na kojem se nalazi njena obrada. Inače, pjesmu je napisao japanski pjesnik Bansui Doi početkom prošlog stoljeća, inspiriran obilaskom ostataka starog dvorca u dalekom Japanu.</p>
 
-Kompozicija koju je na njegove stihove skladao Rentaro Taki postala je jako popularna u Japanu, a bogami i šire. U japanskom gradu Sendaiju nalazi se bista pjesnika Bansuija, pored koje se svakog dana od 9 ujutro do 6 poslijepodne, na svaki puni sat, mogu slušati milozvučne note pjesme Kojo no tsuki. Napravih slobodni prijevod pjesme na hrvatski. Izuzetno slobodan. Ma, ne bi Bansui Doi zamjerio. Garant bi mu bilo drago saznati da su, u nekoj dalekoj zemlji europskoj, njegovi stihovi dozivali u carstvo snova malu crvenokosu djevojčicu koja danas ima pet i pol godina i već dugo se ne budi u gluho doba noći.
+    <p>Kompozicija koju je na njegove stihove skladao Rentaro Taki postala je jako popularna u Japanu, a bogami i šire. U japanskom gradu Sendaiju nalazi se bista pjesnika Bansuija, pored koje se svakog dana od 9 ujutro do 6 poslijepodne, na svaki puni sat, mogu slušati milozvučne note pjesme <em>Kojo no tsuki</em>. Napravih slobodni prijevod pjesme na hrvatski. Izuzetno slobodan. Ma, ne bi Bansui Doi zamjerio. Garant bi mu bilo drago saznati da su, u nekoj dalekoj zemlji europskoj, njegovi stihovi dozivali u carstvo snova malu crvenokosu djevojčicu koja danas ima pet i pol godina i već dugo se ne budi u gluho doba noći.</p>
 
-U krevet odlazi sve kasnije, a prije spavanja joj, umjesto pjevanja uspavanki, čitamo knjigu o Harry Potteru. Mogao bih provjeriti da li još uvijek pali fora sa pjevanjem Kojo no tsuki, ali se plašim ishoda i ne želim pokvariti priču o idealnoj uspavanci za Katju G.
- 
-</p>
-    <a href="tata-neno.html">← Povratak na Tata Neno</a> <!-- Link za povratak na listu crtica -->
+    <p>U krevet odlazi sve kasnije, a prije spavanja joj, umjesto pjevanja uspavanki, čitamo knjigu o Harry Potteru. Mogao bih provjeriti da li još uvijek pali fora sa pjevanjem <em>Kojo no tsuki</em>, ali se plašim ishoda i ne želim pokvariti priču o idealnoj uspavanci za Katju G.</p>
+
+    <a href="tata-neno.html">← Povratak na Tata Neno</a>
   </main>
 
   <footer>
