--- a/nostalgicni-neno.html
+++ b/nostalgicni-neno.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
@@ -10,11 +10,49 @@
     <h1>Nostalgični Neno</h1>
   </header>
   <main>
-    <p>Nostalgične crtice...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Sastanak kućnog savjeta</li>
+      <li>Osmi mart</li>
+      <li>Pločica na ulaznim vratima</li>
+      <li>Klofanje tepiha</li>
+      <li>Iskra</li>
+      <li>Devetnaesti deveti</li>
+      <li>Ivančica</li>
+      <li>Sestre iz kladionice</li>
+      <li>Došao ujak iz Njemačke</li>
+      <li>Radočaj</li>
+      <li>Kačavenda</li>
+      <li>Boka</li>
+      <li>Dan žalosti</li>
+      <li>TDK i Mama's Boys</li>
+      <li>Hardcore na Savi</li>
+      <li>Kapučino</li>
+      <li>Autobusni hitovi</li>
+      <li>Babica se predomislila</li>
+      <li>Na drvetu (obrezivanje i sjećanje)</li>
+      <li>Ježurka Ježić</li>
+      <li>Profesor Kubik</li>
+      <li>Selimović</li>
+      <li>Epidaurus</li>
+      <li>Daljave</li>
+      <li>Derventa</li>
+      <li>Crveni makovi za zabranjene žene</li>
+      <li>Crkni Bukowski!</li>
+      <li>Raja iz zadnje klupe</li>
+      <li>Pas koji je volio vozove</li>
+      <li>Krušna mrva</li>
+      <li>Petkovići (Samo štreberi pišu lektiru u petak)</li>
+      <li>Kafena</li>
+      <li>Tulumara</li>
+      <li>Dlakavi ćevap</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
   </footer>
 </body>
 </html>
+
 
