--- a/Nenina muzika.html
+++ b/Nenina muzika.html
@@ -2,7 +2,7 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Nenina muzika</title>
+  <title>muzika-neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
