--- a/Morski Neno.html
+++ b/Morski Neno.html
@@ -2,7 +2,7 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Morski Neno</title>
+  <title>morski-neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
