--- a/Putopisac Neno.html
+++ b/Putopisac Neno.html
@@ -2,7 +2,7 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Putopisac Neno</title>
+  <title>putopisac-neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
