--- a/bicikl-neno.html
+++ b/bicikl-neno.html
@@ -2,19 +2,37 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Neno biciklist</title>
+  <title>Biciklist Neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Neno biciklist</h1>
+    <h1>Biciklist Neno</h1>
   </header>
   <main>
-    <p>Crtice sa biciklističkih ruta...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Zeba bez straha</li>
+      <li>Haro na Savi</li>
+      <li>Biciklom po Pelješcu</li>
+      <li>Bistrooka Lucija</li>
+      <li>Kostajnička</li>
+      <li>Petrinjska</li>
+      <li>Tetovirani konobari i ljubazni željezničari</li>
+      <li>Rudolfina</li>
+      <li>Draganići</li>
+      <li>Baka iz zaselka na kraju puta</li>
+      <li>Kravarska kravata</li>
+      <li>Rude</li>
+      <li>Na Moslavačkoj gori</li>
+      <li>Savska kružna ruta</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
   </footer>
 </body>
 </html>
+
 
