--- a/planine-neno.html
+++ b/planine-neno.html
@@ -2,15 +2,33 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Neno planinar</title>
+  <title>Planine Neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Neno planinar</h1>
+    <h1>Planine Neno</h1>
   </header>
   <main>
-    <p>Planinarske crtice...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Biokovska</li>
+      <li>Klek</li>
+      <li>Oštrc</li>
+      <li>Nevoljaš</li>
+      <li>Više vica radi (Bundaš zvani Vilma)</li>
+      <li>Vaganski vrh</li>
+      <li>1600 metara visinske razlike između dva nesvakidašnja susreta</li>
+      <li>Hahlić</li>
+      <li>Krndija</li>
+      <li>Japansko pivo na Plešivici</li>
+      <li>Čevo</li>
+      <li>Bobotov Kuk</li>
+      <li>Vinetu na Velebitu</li>
+      <li>Sinjal</li>
+      <li>Doviđenja planine</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
