--- a/muzika-neno.html
+++ b/muzika-neno.html
@@ -2,18 +2,48 @@
 <html lang="hr">
 <head>
   <meta charset="UTF-8">
-  <title>Nenina muzika</title>
+  <title>Muzika Neno</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>Nenina muzika</h1>
+    <h1>Muzika Neno</h1>
   </header>
   <main>
-    <p>Muzičke, crtice, uglavnom o koncertima...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Atomsko sklonište</li>
+      <li>Accept</li>
+      <li>Gamad 2 (Jahači, grešnici i pičke)</li>
+      <li>Aguante Megadeth</li>
+      <li>Džemo voli džem, a Miladina život nagazio đonom</li>
+      <li>D.R.I.</li>
+      <li>Čovek bez sluha</li>
+      <li>TV Kalendar (tribute to Lemmy Kilmister)</li>
+      <li>Sepultura</li>
+      <li>Brucošijada ETF-a</li>
+      <li>Paradise Lost</li>
+      <li>Tustin autogram</li>
+      <li>Dinosauri dolaze</li>
+      <li>Metallica na ZG hipodromu</li>
+      <li>Crveni makovi za zabranjene žene</li>
+      <li>Preslušao sam ploču od početka do kraja</li>
+      <li>Legendu Branimira, živoga rokera, sahranjuje četa imbecila</li>
+      <li>Eksploatisani</li>
+      <li>Old School Thrash</li>
+      <li>Foliram</li>
+      <li>Biohazard</li>
+      <li>Gino Banana</li>
+      <li>Slayer</li>
+      <li>Ramones</li>
+      <li>Kepone</li>
+      <li>Faith No More</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
   </footer>
 </body>
 </html>
+
