--- a/morski-neno.html
+++ b/morski-neno.html
@@ -10,7 +10,32 @@
     <h1>Morski Neno</h1>
   </header>
   <main>
-    <p>Crtice sa Jadranskog mora, najviše sa otoka...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Suton Valunski</li>
+      <li>Rovinjska</li>
+      <li>Mali Zoran</li>
+      <li>Rođendan na Biskupovoj</li>
+      <li>Stiniva</li>
+      <li>Zarače, Pokrivenik i vidikovac</li>
+      <li>Muka ježeva i skeč s ugorom</li>
+      <li>Dvanaest hitova na Valunskoj ploči</li>
+      <li>Mali Bok i Orlec</li>
+      <li>Manjigača i kredenac</li>
+      <li>Žirje (31.03.2023)</li>
+      <li>Od mola do mola</li>
+      <li>Skozanjska</li>
+      <li>Pritiščina</li>
+      <li>Kod Senka Karuze u Maloj Travni</li>
+      <li>Na vaporu sa Leonom</li>
+      <li>Kapljice</li>
+      <li>Prvić</li>
+      <li>Hvarski hajvani i baje</li>
+      <li>Osmi valunski dan</li>
+      <li>Lubenice</li>
+      <li>Surfin at Viganj</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
