--- a/putopisac-neno.html
+++ b/putopisac-neno.html
@@ -10,7 +10,29 @@
     <h1>Putopisac Neno</h1>
   </header>
   <main>
-    <p>Crtice s putovanja...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Međimurski međuprostor</li>
+      <li>Minkenska</li>
+      <li>Celjska</li>
+      <li>Rogaška</li>
+      <li>Ljubljanska, dio prvi</li>
+      <li>Ljubljanska, dio drugi</li>
+      <li>Na Pivskom jezeru</li>
+      <li>Rambo iz kanjona Mrtvice</li>
+      <li>Zabranjeno jezero</li>
+      <li>Londonska (11.12.2007)</li>
+      <li>Lumbarda (24.08.2011)</li>
+      <li>Pivo u Krumlovu</li>
+      <li>U Černoho vola - dio prvi</li>
+      <li>U Černoho vola - dio drugi</li>
+      <li>Moji koraki - dio prvi</li>
+      <li>Moji koraki - dio drugi</li>
+      <li>Moji koraki - dio treći</li>
+      <li>NK Šparta</li>
+      <li>Koversada</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
