--- a/nesvrstani-neno.html
+++ b/nesvrstani-neno.html
@@ -7,10 +7,91 @@
 </head>
 <body>
   <header>
-    <h1Nesvrstani Neno</h1>
+    <h1>Nesvrstani Neno</h1>
   </header>
   <main>
-    <p>Ostale crtice...</p>
+    <h2>Popis crtica:</h2>
+    <ol>
+      <li>Izbačeni ljubimac</li>
+      <li>Evo svjedoka - propade banja</li>
+      <li>Dvadeset godina za trideset dana</li>
+      <li>Deratizacija</li>
+      <li>Imunitet</li>
+      <li>Neca i Neco</li>
+      <li>Ambidekster</li>
+      <li>Pegula</li>
+      <li>Nikšićko</li>
+      <li>Bijela noć prvomartovska</li>
+      <li>Kada izađem</li>
+      <li>Ivica, Tomica i udovica</li>
+      <li>Šavovi</li>
+      <li>Longetizacija</li>
+      <li>Golubanov blues za Golubara (In memoriam Goran Golubar)</li>
+      <li>Hoka hej!</li>
+      <li>Bobu bob, popu pop</li>
+      <li>Rekvijem za susjedu Horvat</li>
+      <li>Skretničar</li>
+      <li>Sanacija štete (30.07.2013)</li>
+      <li>Pet kilometara ispod trideset minuta - dio prvi</li>
+      <li>Pet kilometara ispod trideset minuta - dio drugi</li>
+      <li>Laktaš man</li>
+      <li>Osmog maja</li>
+      <li>Tri susreta manje bliske vrste</li>
+      <li>Lička Kaldrma</li>
+      <li>Antifašnička</li>
+      <li>Podstrek</li>
+      <li>Terapija</li>
+      <li>Žute cipele</li>
+      <li>Hobotničar</li>
+      <li>Tri puta po tri</li>
+      <li>Na hodniku kirurgije</li>
+      <li>Kratka (prije)putna</li>
+      <li>Pet eura u džepu mom</li>
+      <li>Prije krijesnice</li>
+      <li>Krijesnice</li>
+      <li>Dnevni mamurluk i groznica subotnje večeri</li>
+      <li>Poplave</li>
+      <li>Poslovni ručak</li>
+      <li>Sakata Neman, Sofra i turneja po Rock aveniji</li>
+      <li>Koridor prioriteta</li>
+      <li>Trening otpornosti na stres</li>
+      <li>Oš-Neš-Bangladeš</li>
+      <li>Prezentacija</li>
+      <li>Drastična razlika</li>
+      <li>Četkica za zube</li>
+      <li>Normalizacija</li>
+      <li>Hrkači iz rukometnih gradova</li>
+      <li>Baksuzan slobodan dan</li>
+      <li>Nenanišanivši</li>
+      <li>Primijenjena mitologija</li>
+      <li>Fazanska je tuga pregolema</li>
+      <li>Martovske ide</li>
+      <li>Titovim stazama revolucije</li>
+      <li>Ulični hodač</li>
+      <li>Zakaj volem četvrtak</li>
+      <li>Kerefeka</li>
+      <li>Prijatelju, kočnice mi ne rade baš sve</li>
+      <li>Domjenak</li>
+      <li>Adventska utrka</li>
+      <li>Samoća</li>
+      <li>Dan Mladosti</li>
+      <li>Potres u Zagrebu</li>
+      <li>Anestezija</li>
+      <li>Svjetski dani</li>
+      <li>Trabunjanje jednog lijenčine</li>
+      <li>Jazavac pred sutkinjom</li>
+      <li>Čovjek koji nije puno pričao</li>
+      <li>Mentor</li>
+      <li>Sabina</li>
+      <li>Badmintonaš ambidekster</li>
+      <li>Pivanje umjesto plivanja</li>
+      <li>Točka</li>
+      <li>Kinetek</li>
+      <li>Minuli rad</li>
+      <li>Prvi proljetni roštilj</li>
+      <li>Zimska idila ne voli kišobrane</li>
+    </ol>
+    <a href="index.html">← Povratak na početnu stranicu</a>
   </main>
   <footer>
     <p>&copy; 2025 Nenine crtice</p>
